@@ -22,6 +22,7 @@ date: dd/mm/yyy
   * enabled support for multiple administrators
   * updated to RDF4J 3.0.0
   * added fully support for OWL 2 restrictions
+  * added service for deleting repositories on remote triple stores
   
 version 6.0
 date: 27/06/2019
